Financeiro/main/default/objects/Lancamento_fixo__c/Lancamento_fixo__c.object-meta.xml
<CustomObject>
    <label>Lançamento fixo</label>
    <nameField>
        <label>Nome do Lançamento fixo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lançamentos fixos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>