Financeiro/main/default/objects/Lancamento_fixo__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Categoria</label>
    <referenceTo>Categoria__c</referenceTo>
    <relationshipLabel>Lançamentos fixos</relationshipLabel>
    <relationshipName>Lancamentos_fixos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>