Financeiro/main/default/objects/Lancamento_fixo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Categoria__c</columns>
    <columns>Tipo__c</columns>
    <columns>Valor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>